Fixing compile issues due to java 9 sdk usage and updating pom.xml to prevent issue from occuring again